[package]
name = "oci-overlayer"
version = "0.1.0"
edition = "2021"


[dependencies]
fatality = { version = "*" }
thiserror = { version = "*" }
gum = { package = "log", version = "*" }
regex = "1"
once_cell = "1"
oci-spec = "0.6"
libcontainer = { version = "0.3.1", default-features = true, features = [
  "cgroupsv2_devices",
  "v2",
  "libseccomp",
] }
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "rt-multi-thread",
  "time",
] }
fs-err = { version = "*" }
sha2 = { version = "=0.8.2" }
uuid = { version = "1", features = ["v4"] }
flate2 = { version = "*" }
tar = "*"
tempfile = "*"
color-eyre = "*"
pretty_env_logger = "*"
oci-distribution = "*"
const-hex = "1.10.0"
dirs = "5.0.1"
akv = "0.1"
serde_json = "1.0.111"
